<resources>
    <string name="app_name">Hello</string>
    <string name="text_button1">constraint_layout</string>
    <string name="text_button2">button2</string>
    <string name="text_button3">button3</string>
    <string name="text_button4">button4</string>
    <string name="text_button5">button5</string>
    <string name="text_button6">button6</string>
    <string name="text_button7">button7</string>
    <string name="text_button8">button8</string>
    <string name="text_button9">button9</string>
    <string name="text_button10">button10</string>
    <string name="main_title">Android practice</string>
    <string name="constraint_activity_title">Hello!</string>
    <string name="sign_up_button_text">Sign up</string>
    <string name="login_button_text">Login</string>
    <string name="username_input_text_hint">Username</string>
    <string name="password_input_text_hint">Password</string>
    <string name="remember_me_checkbox_text">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="or_connect_with">or_connect_with</string>
    <string name="sign_up_with_email">Sign Up with E-mail</string>
</resources>
