<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logo_image_view"
        android:layout_width="148.9dp"
        android:layout_height="30.3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="88dp"
        android:src="@drawable/logo" />
    
    <EditText
        android:id="@+id/username_edit_text"
        android:layout_width="@dimen/input_width"
        android:layout_height="@dimen/input_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_image_view"
        android:layout_marginTop="77.7dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/username_input_text_hint"
        android:paddingHorizontal="@dimen/input_horizontal_padding"
        android:singleLine="true"
        android:textColor="@color/baseTextColor"
        style="@style/BaseInputTextStyle"
        />

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="@dimen/input_width"
        android:layout_height="@dimen/input_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_edit_text"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/password_input_text_hint"
        android:paddingHorizontal="@dimen/input_horizontal_padding"
        android:singleLine="true"
        android:textColor="@color/baseTextColor"
        style="@style/BaseInputTextStyle"
        />

    <LinearLayout
        android:id="@+id/account_tools_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_edit_text"
        android:layout_marginTop="22.5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <CheckBox
            android:textColor="@color/baseTextColor"
            android:text="@string/remember_me_checkbox_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textColor="@color/baseTextColor"
            android:text="@string/forgot_password"
            android:layout_marginLeft="37.5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_tools_layout"
        android:layout_marginTop="22.5dp"
        android:layout_width="@dimen/input_width"
        android:text="@string/login_button_text"
        android:textColor="@color/white"
        android:background="@drawable/button_background_rounded_corners"
        android:textAllCaps="false"
        android:layout_height="50dp" />

</androidx.constraintlayout.widget.ConstraintLayout>